Update /listings endpoints
