# src/types/index.ts
@@ -1,0 +1,6 @@
+export type AuthSignature = {
+  sig: string;
+  derivedVia: string;
+  signedMessage: string;
+  address: string;
+};
